Fix blog posts too wide on phone

--- a/css/main.css
+++ b/css/main.css
@@ -450,6 +450,7 @@ a button,
 
 body {
   display: grid;
+  grid-auto-columns: 100%;
   min-height: 100vh;
 }
 
